# helios-engines

./: LICENSE  README.md
converter/: Cargo.toml  README.md  comandos v2.txt  validate_hnf.py
converter/benches/: hqs_bench.rs
converter/src/: builder.rs  lib.rs  main.rs
converter/src/dictionary/: mod.rs
converter/src/hints/: binary.rs  mod.rs
converter/src/hnf/: header.rs  mod.rs  writer.rs
converter/src/hqs/: common.rs  grid_search.rs  hq4k.rs  hq5k.rs  mod.rs
converter/src/htf/: binary.rs  mod.rs  validate.rs
converter/src/mapping/: clip.rs  factory.rs  llama.rs  mapping.rs  mod.rs  phi.rs  qwen2.rs  traits.rs  types.rs
converter/src/safetensor/: mod.rs
