[package]
name = "helios-convert"
version = "0.1.0"
edition = "2021"
description = "HELIOS Native Format (HNF) converter - Safetensors to HNFv9"
authors = ["Andrés García <andres@helios.ai>"]
license = "MIT"
repository = "https://github.com/helios-ai/helios-convert"
keywords = ["ai", "llm", "quantization", "inference"]
categories = ["command-line-utilities", "science"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Parallelism
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numeric
half = { version = "2.3", features = ["std"] }
byteorder = "1.5"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
crc32fast = "1.3"

# Memory mapping
memmap2 = "0.9"

# Progress
indicatif = { version = "0.17", features = ["rayon"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Unicode/regex para tokenizer
regex = "1.10"
unicode-normalization = "0.1"

# Datetime
chrono = "0.4"

# Random (for tests)
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4

[[bin]]
name = "helios-convert"
path = "src/main.rs"

[[bench]]
name = "hqs_bench"
harness = false
